# asv_simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
config/: rosdoc.yaml  ship1_waypoint_list.yaml  ship2_waypoint_list.yaml  waypoint_list1.yaml  waypoint_list2.yaml  waypoint_test_list.yaml
config/models/: revolt.urdf  ship1.urdf  ship2.urdf  simple.urdf  viknes.urdf
config/parameters/: viknes.yaml  viknes2.yaml  viksund.yaml
config/rviz/: config.rviz  one_vessel_with_map.rviz  three_vessels.rviz  two_vessels.rviz
config/waypoints/: asv_head_on_and_crossing.yaml  asv_overtaking.yaml  asv_overtaking_and_crossing.yaml  asv_waypoint_list.yaml  clockwise_rectangle.yaml  east_to_west.yaml  in_between_rules.yaml  left_to_right.yaml  north_to_south.yaml  overtaking_headon_crossing_asv.yaml  overtaking_headon_crossing_ship1.yaml  overtaking_headon_crossing_ship2.yaml  ship1_head_on_and_crossing.yaml  ship1_overtaking.yaml  ship1_overtaking_and_crossing.yaml  ship2_head_on_and_crossing.yaml  ship2_overtaking_and_crossing.yaml  ship2_waypoint_list.yaml  slow_south_to_north.yaml  south_to_north.yaml  waypoint_test_list.yaml  west_to_east.yaml
include/: asv_simulator.h  asv_simulator_node.h  wave_filter.h
launch/: default.launch  example.launch  logdata.launch  testsim.launch  two_obstacles.launch
meshes/: Revolt.STL  boat.dae  boat.stl  boat2.blend  boat2.dae  boat2.stl  boat3.stl  hovik.STL  testmap.stl  viknes.STL
nodes/: ctrl_LOS_guidance.py  data_publisher.py  fake_asv.py  meshpublisher.py  rlog011.csv  teleop_joy.py  vessel.py
src/: asv_simulator.cpp  asv_simulator_node.cpp  wave_filter.cpp
